--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	// https://mvnrepository.com/artifact/com.github.javafaker/javafaker
 	implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
+	implementation group: 'io.dekorate', name: 'kubernetes-spring-starter',version: '0.7.5'
 
 }
 
